--- a/tox.ini
+++ b/tox.ini
@@ -8,8 +8,8 @@ deps =
   pytest-cov
 commands =
   pytest --doctest-modules \
-         {envsitepackagesdir}/swh/foo \
-         --cov={envsitepackagesdir}/swh/foo \
+         {envsitepackagesdir}/swh/scanner \
+         --cov={envsitepackagesdir}/swh/scanner \
          --cov-branch {posargs}
 
 [testenv:flake8]
