basic test for the scanner
Closes T2299

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include requirements*.txt
 include version.txt
 include README.md
 recursive-include swh py.typed
+recursive-include swh/scanner/tests/data/ *
