--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,3 @@
 [pytest]
 norecursedirs = docs
-addopts = --no-start-live-server --live-server-port 6600 -p no:django
+addopts = --live-server-port 6600 -p no:django
