model: get information about directories
for each directory store information about how many contents are
presents and discovered

--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -2,6 +2,9 @@ pytest
 aioresponses
 pytest_asyncio
 pytest_flask
+plotly
+pandas
+numpy
 swh.core[testing-core]
 swh.model[testing]
 swh.storage[testing]
