ndjson output format
Closes T2363

--- a/mypy.ini
+++ b/mypy.ini
@@ -11,5 +11,5 @@ ignore_missing_imports = True
 [mypy-pytest.*]
 ignore_missing_imports = True
 
-# [mypy-add_your_lib_here.*]
-# ignore_missing_imports = True
+[mypy-ndjson.*]
+ignore_missing_imports = True
