--- a/mypy.ini
+++ b/mypy.ini
@@ -13,3 +13,15 @@ ignore_missing_imports = True
 
 [mypy-ndjson.*]
 ignore_missing_imports = True
+
+[mypy-dash.*]
+ignore_missing_imports = True
+
+[mypy-dash_core_components.*]
+ignore_missing_imports = True
+
+[mypy-dash_html_components.*]
+ignore_missing_imports = True
+
+[mypy-plotly.*]
+ignore_missing_imports = True
