dashboard: file visualization per directory path
Closes T2364

--- a/mypy.ini
+++ b/mypy.ini
@@ -23,5 +23,8 @@ ignore_missing_imports = True
 [mypy-dash_html_components.*]
 ignore_missing_imports = True
 
+[mypy-dash_bootstrap_components.*]
+ignore_missing_imports = True
+
 [mypy-plotly.*]
 ignore_missing_imports = True
