--- a/mypy.ini
+++ b/mypy.ini
@@ -5,6 +5,12 @@ warn_unused_ignores = True
 
 # 3rd party libraries without stubs (yet)
 
+[mypy-numpy.*]
+ignore_missing_imports = True
+
+[mypy-pandas.*]
+ignore_missing_imports = True
+
 [mypy-pkg_resources.*]
 ignore_missing_imports = True
 
