Fix mypy issue which fails the build

--- a/mypy.ini
+++ b/mypy.ini
@@ -32,5 +32,8 @@ ignore_missing_imports = True
 [mypy-dash_bootstrap_components.*]
 ignore_missing_imports = True
 
+[mypy-aioresponses.*]
+ignore_missing_imports = True
+
 [mypy-plotly.*]
 ignore_missing_imports = True
