--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,6 +1,6 @@
 aioresponses
 asynctest
-pytest < 7.0.0  # v7.0.0 removed _pytest.tmpdir.TempdirFactory, which is used by some of the pytest plugins we use
+pytest
 pytest-asyncio
 pytest-flask
 pytest-mock
