--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,5 @@
 [pytest]
 norecursedirs = build docs .*
 addopts = --live-server-port 6600 -p no:django --no-live-server-clean-stop
+
+asyncio_mode = auto
