cli: Add `swh scanner login` command
The login command helps user to authenticate through OIDC
and possibly save OIDC configuration to global yml configuration
file

* Make use of swh auth for OIDC authentication
* Ensure correct default 'keycloak' configuration
* Load configuration file via arg, env, or default global path
* Add a 'login' command to scanner cli that invoke swh auth config

--- a/swh/scanner/tests/data/global.yml
+++ b/swh/scanner/tests/data/global.yml
@@ -1,3 +1,12 @@
 web-api:
-    url: "https://example.com/api/1"
-    auth-token: "dummy"
+  url: https://example.com/api/1/
+scanner:
+  server:
+    port: 9001
+keycloak:
+  client_id: client-test
+  realm_name: realm-test
+  server_url: http://keycloak:8080/keycloak/auth/
+keycloak_tokens:
+  realm-test:
+    client-test: xxxtokenxxx
