Migrate to copier-based swh-py-template

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,7 +1,9 @@
 [mypy]
 namespace_packages = True
 warn_unused_ignores = True
-
+explicit_package_bases = True
+# ^ Needed for mypy to detect py.typed from swh packages installed
+# in editable mode
 
 # 3rd party libraries without stubs (yet)
 
@@ -12,9 +14,6 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-pkg_resources.*]
-ignore_missing_imports = True
-
-[mypy-pytest.*]
 ignore_missing_imports = True
 
 [mypy-ndjson.*]
@@ -31,3 +30,5 @@ ignore_missing_imports = True
 
 [mypy-plotly.*]
 ignore_missing_imports = True
+# [mypy-add_your_lib_here.*]
+# ignore_missing_imports = True
