--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,10 @@
 [tox]
-requires =
-  tox>4
-envlist=black,flake8,mypy,py3
+minversion = 4
+envlist =
+  black
+  flake8
+  mypy
+  py3
 
 [testenv]
 extras =
@@ -10,9 +13,15 @@ deps =
   pytest-cov
 commands =
   pytest --doctest-modules \
-         {envsitepackagesdir}/swh/scanner \
+         --import-mode importlib \
+         --rootdir {envsitepackagesdir} \
          --cov={envsitepackagesdir}/swh/scanner \
-         --cov-branch {posargs}
+         --cov-branch \
+         {envsitepackagesdir}/swh/scanner \
+         {posargs}
+# --rootdir and --import-mode are required to make tests that depends
+# on the test file to be a proper submodule of the swh namespace after
+# migration to PEP420 (implicit namespace).
 
 [testenv:black]
 skip_install = true
@@ -43,32 +52,14 @@ commands =
 # breaking doc build
 [testenv:sphinx]
 allowlist_externals = make
-usedevelop = true
 extras =
   testing
 deps =
-  # fetch and install swh-docs in develop mode
-  -e git+https://gitlab.softwareheritage.org/swh/devel/swh-docs.git\#egg=swh.docs
+  # fetch and install swh-docs
+  git+https://gitlab.softwareheritage.org/swh/devel/swh-docs.git\#egg=swh.docs
 setenv =
   SWH_PACKAGE_DOC_TOX_BUILD = 1
   # turn warnings into errors
   SPHINXOPTS = -W
 commands =
-  make -I ../.tox/sphinx/src/swh-docs/swh/ -C docs
-
-# build documentation only inside swh-environment using local state
-# of swh-docs package
-[testenv:sphinx-dev]
-allowlist_externals = make
-usedevelop = true
-extras =
-  testing
-deps =
-  # install swh-docs in develop mode
-  -e ../swh-docs
-setenv =
-  SWH_PACKAGE_DOC_TOX_BUILD = 1
-  # turn warnings into errors
-  SPHINXOPTS = -W
-commands =
-  make -I ../.tox/sphinx-dev/src/swh-docs/swh/ -C docs
+  make -I {env_dir}/share/ -C docs
