--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,12 @@
 *.egg-info/
 *.pyc
-*.sw?
-*~
 .coverage
 .eggs/
+.hypothesis
 .mypy_cache
 .tox
 __pycache__
 build/
 dist/
-version.txt
-.mypy_cache/
+docs/README.rst
+docs/README.md
