Apply swh-py-template 0.1.6

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,8 @@
 [pytest]
-norecursedirs = build docs .*
-addopts = --live-server-port 6600 -p no:django --no-live-server-clean-stop
-
 asyncio_mode = auto
+norecursedirs = build docs .*
+addopts =
+   --import-mode=importlib
+   --live-server-port 6600
+   -p no:django
+   --no-live-server-clean-stop
