--- a/tox.ini
+++ b/tox.ini
@@ -13,20 +13,19 @@ deps =
   pytest-cov
 commands =
   pytest --doctest-modules \
-         --import-mode importlib \
          --rootdir {envsitepackagesdir} \
          --cov={envsitepackagesdir}/swh/scanner \
          --cov-branch \
          {envsitepackagesdir}/swh/scanner \
          {posargs}
-# --rootdir and --import-mode are required to make tests that depends
-# on the test file to be a proper submodule of the swh namespace after
-# migration to PEP420 (implicit namespace).
+# --rootdir (with --import-mode from pytest.ini) are required to make tests
+# that depends on the test file to be a proper submodule of the swh namespace
+# after migration to PEP420 (implicit namespace).
 
 [testenv:black]
 skip_install = true
 deps =
-  black==22.10.0
+  black==23.1.0
 commands =
   {envpython} -m black --check swh
 
@@ -62,4 +61,4 @@ setenv =
   # turn warnings into errors
   SPHINXOPTS = -W
 commands =
-  make -I {env_dir}/share/ -C docs
+  make -I {env_dir}/share/swh-docs -C docs
