--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,11 @@
 [pytest]
-asyncio_mode = auto
 norecursedirs = build docs .*
+asyncio_mode = auto
+consider_namespace_packages = true
+
 addopts =
    --live-server-port 6600
    -p no:django
    --no-live-server-clean-stop
+
 testpaths = swh/scanner/tests
