Add a standalone setup command and run it on first scan
This will guide first time users by providing an overview of the
features, privacy concerns, helping with authentication and
configuration options, as well as giving a few examples of how to scan.

--- a/pytest.ini
+++ b/pytest.ini
@@ -2,6 +2,8 @@
 norecursedirs = build docs .*
 asyncio_mode = auto
 consider_namespace_packages = true
+markers =
+   setup_test: allow the setup wizard to run
 
 addopts =
    --live-server-port 6600
