Annotate most tests so mypy checks them

--- a/mypy.ini
+++ b/mypy.ini
@@ -13,5 +13,8 @@ ignore_missing_imports = True
 [mypy-ndjson.*]
 ignore_missing_imports = True
 
+[mypy-pytest_flask.*]
+ignore_missing_imports = True
+
 # [mypy-add_your_lib_here.*]
 # ignore_missing_imports = True
