--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 # Add here external Python modules dependencies, one per line. Module names
 # should match https://pypi.python.org/pypi names. For the full spec or
 # dependency lines, see https://pip.readthedocs.org/en/1.1/requirements.html
+click>=8.2.0
 requests
 ndjson
 flask
