--- a/pyproject.toml
+++ b/pyproject.toml
@@ -81,10 +81,10 @@ ignore = [
     "W503" # line break before binary operator <https://github.com/psf/black/issues/52>
 ]
 max-line-length = 88
+exclude = ["build/", ".tox/"]
 
 [tool.pytest.ini_options]
 norecursedirs = "build docs .*"
-asyncio_mode = "strict"
 consider_namespace_packages = true
 addopts = "--live-server-port 6600 -p no:django --no-live-server-clean-stop"
 testpaths = [
